Fix header gap and h1 font-size

--- a/app/scss/base/typography.scss
+++ b/app/scss/base/typography.scss
@@ -77,7 +77,7 @@
 %text-400 {
 	@include text(
 		var(--wp--preset--font-family--primary),
-		clamp(var(--wp--preset--font-size--huge), 5vw, var(--wp--preset--font-size--gigantic)),
+		var(--wp--preset--font-size--gigantic),
 		var(--wp--custom--font-weight--thin),
 		var(--wp--custom--line-height--normal),
 		transparent,
